tests/baselines/reference/isolatedDeclarationErrorsClasses.errors.txt
isolatedDeclarationErrorsClasses.ts(3,5): error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(4,5): error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(12,18): error TS7006: Parameter 'p' implicitly has an 'any' type.
isolatedDeclarationErrorsClasses.ts(12,18): error TS9011: Parameter must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(13,23): error TS9011: Parameter must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(15,9): error TS9009: At least one accessor must have an explicit return type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(16,9): error TS7032: Property 'setOnly' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
isolatedDeclarationErrorsClasses.ts(16,17): error TS7006: Parameter 'value' implicitly has an 'any' type.
isolatedDeclarationErrorsClasses.ts(40,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
isolatedDeclarationErrorsClasses.ts(40,6): error TS2304: Cannot find name 'missing'.
isolatedDeclarationErrorsClasses.ts(46,5): error TS9014: Computed properties must be number or string literals, variables or dotted expressions with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(48,5): error TS9014: Computed properties must be number or string literals, variables or dotted expressions with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(48,35): error TS7006: Parameter 'v' implicitly has an 'any' type.
isolatedDeclarationErrorsClasses.ts(50,9): error TS9014: Computed properties must be number or string literals, variables or dotted expressions with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(52,9): error TS7032: Property '[noParamAnnotationStringName]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
isolatedDeclarationErrorsClasses.ts(52,9): error TS9014: Computed properties must be number or string literals, variables or dotted expressions with --isolatedDeclarations.
isolatedDeclarationErrorsClasses.ts(52,39): error TS7006: Parameter 'value' implicitly has an 'any' type.
isolatedDeclarationErrorsClasses.ts(54,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
isolatedDeclarationErrorsClasses.ts(59,5): error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
isolatedDeclarationErrorsClasses.ts(60,5): error TS7010: '[noAnnotationLiteralName]', which lacks return-type annotation, implicitly has an 'any' return type.
isolatedDeclarationErrorsClasses.ts(60,5): error TS9013: Expression type can't be inferred with --isolatedDeclarations.


==== isolatedDeclarationErrorsClasses.ts (21 errors) ====
    export class Cls {
    
        field = 1 + 1;
        ~~~~~
!!! error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9029 isolatedDeclarationErrorsClasses.ts:3:5: Add a type annotation to the property field.
        method() { return console.log() }
        ~~~~~~
!!! error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
!!! related TS9034 isolatedDeclarationErrorsClasses.ts:4:5: Add a return type to the method
    
        methodImplicitVoid() {
            if (Math.random() > 0.5) console.log()
            else console.log()
        }
        methodOk(): void {}
    
        methodParams(p): void {}
                     ~
!!! error TS7006: Parameter 'p' implicitly has an 'any' type.
                     ~
!!! error TS9011: Parameter must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9028 isolatedDeclarationErrorsClasses.ts:12:18: Add a type annotation to the parameter p.
        methodParams2(p = 1 + 1): void {}
                          ~~~~~
!!! error TS9011: Parameter must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9028 isolatedDeclarationErrorsClasses.ts:13:19: Add a type annotation to the parameter p.
    
        get getOnly() { return 1 + 1 }
            ~~~~~~~
!!! error TS9009: At least one accessor must have an explicit return type annotation with --isolatedDeclarations.
!!! related TS9032 isolatedDeclarationErrorsClasses.ts:15:9: Add a return type to the get accessor declaration.
        set setOnly(value) { }
            ~~~~~~~
!!! error TS7032: Property 'setOnly' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                    ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
    
        get getSetBad() { return 0 }
        set getSetBad(value) { }
    
        get getSetOk(): number { return 0 }
        set getSetOk(value) { }
    
        get getSetOk2() { return 0 }
        set getSetOk2(value: number) { }
    
        get getSetOk3(): number { return 0 }
        set getSetOk3(value: number) { }
    }
    
    let noAnnotationStringName: string = "noAnnotationStringName";
    let noParamAnnotationStringName: string = "noParamAnnotationStringName";
    
    const noAnnotationLiteralName = "noAnnotationLiteralName";
    const noParamAnnotationLiteralName = "noParamAnnotationLiteralName";
    
    export class C {
    
        // Should not be reported as an isolated declaration error
        [missing] = 1;
        ~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
         ~~~~~~~
!!! error TS2304: Cannot find name 'missing'.
    
        [noAnnotationLiteralName](): void { }
    
        [noParamAnnotationLiteralName](v: string): void { }
    
        [noAnnotationStringName]() { }
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9014: Computed properties must be number or string literals, variables or dotted expressions with --isolatedDeclarations.
    
        [noParamAnnotationStringName](v): void { }
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9014: Computed properties must be number or string literals, variables or dotted expressions with --isolatedDeclarations.
                                      ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    
        get [noAnnotationStringName]() { return 0;}
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9014: Computed properties must be number or string literals, variables or dotted expressions with --isolatedDeclarations.
    
        set [noParamAnnotationStringName](value) { }
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7032: Property '[noParamAnnotationStringName]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9014: Computed properties must be number or string literals, variables or dotted expressions with --isolatedDeclarations.
                                          ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
    
        [("A" + "B") as "AB"] =  1;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    
    }
    
    export interface I {
        [noAnnotationStringName]: 10;
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
        [noAnnotationLiteralName]();
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: '[noAnnotationLiteralName]', which lacks return-type annotation, implicitly has an 'any' return type.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
    }